<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_Sports_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/m_Title_Side"
        android:layout_marginRight="@dimen/m_Title_Side"
        android:layout_marginBottom="@dimen/m_TB_BUTS"
        android:layout_marginTop="@dimen/m_TB_BUTS"
        android:background="@drawable/circle"
        android:text="@string/Foot"
        android:textAlignment="center"
        android:textColor="@color/ButText"
        android:textSize="@dimen/big_text" />

    <Button
        android:id="@+id/button_Acc_Foot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textView_Nom_Foot"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/m_But_Side"
        android:layout_marginRight="@dimen/m_But_Side"
        android:layout_marginBottom="@dimen/m_TB_BUTS"
        android:layout_marginTop="@dimen/m_TB_BUTS"
        android:text="@string/Acc"
        android:textAllCaps="false"
        android:textSize="@dimen/big_text"
        android:textColor="@color/ButText"
        android:background="@color/ButBack"/>


    <Button
        android:id="@+id/button_Sports_Foot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_Acc_Foot"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/m_But_Side"
        android:layout_marginRight="@dimen/m_But_Side"
        android:layout_marginBottom="@dimen/m_TB_BUTS"
        android:layout_marginTop="@dimen/m_TB_BUTS"
        android:text="@string/Sport"
        android:textAllCaps="false"
        android:textSize="@dimen/big_text"
        android:textColor="@color/ButText"
        android:background="@color/ButBack"/>


    <TextView
        android:id="@+id/textView_Nom_Foot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/m_Title_Side"
        android:layout_marginRight="@dimen/m_TB_BUTS"
        android:layout_marginBottom="@dimen/m_TB_BUTS"
        android:layout_marginTop="@dimen/m_TB_BUTS"
        android:textSize="@dimen/big_text"
        android:textColor="@color/red"
        android:text="@string/Nex"
        android:textStyle="italic"/>
    <TextView
        android:id="@+id/textView_Prenom_Foot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/textView_Nom_Foot"
        android:layout_marginRight="@dimen/m_But_Side"
        android:layout_marginBottom="@dimen/m_TB_BUTS"
        android:layout_marginTop="@dimen/m_TB_BUTS"
        android:text="@string/Pex"
        android:textColor="@color/red"
        android:textSize="@dimen/big_text"
        android:textStyle="italic"   />

    <ImageView
        android:id="@+id/imageView_IconSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/football" />

    <TextView
        android:id="@+id/textView_DefSport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Sports_Title"
        android:layout_above="@id/imageView_IconSport"
        android:layout_centerHorizontal="true"
        android:text="@string/DefFoot"

        android:textSize="@dimen/normal_text"/>

</RelativeLayout>
