<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.florentgmail.kleinclaus.kleinclausflorent_tp_interfacesimple.sports">

    <TextView
        android:id="@+id/textView_Sports_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/m_Title_Side"
        android:layout_marginRight="@dimen/m_Title_Side"
        android:layout_marginBottom="@dimen/m_TB_BUTS"
        android:layout_marginTop="@dimen/m_TB_BUTS"
        android:background="@drawable/circle"
        android:text="@string/Sport"
        android:textAlignment="center"
        android:textColor="@color/ButText"
        android:textSize="@dimen/big_text" />

    <ListView
        android:id="@+id/myList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></ListView>

    <Button
        android:id="@+id/button_Acc_Sports"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/m_But_Side"
        android:layout_marginRight="@dimen/m_But_Side"
        android:layout_marginBottom="@dimen/m_TB_BUTS"
        android:layout_marginTop="@dimen/m_TB_BUTS"
        android:text="@string/Acc"
        android:textAllCaps="false"
        android:textSize="@dimen/big_text"
        android:textColor="@color/ButText"
        android:background="@color/ButBack"/>
    <TextView
        android:id="@+id/textView_Nom_Sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_text"
        android:textColor="@color/red"
        android:text="@string/Nex"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/textView_Prenom_Sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pex"
        android:textColor="@color/red"
        android:textSize="@dimen/big_text"
        android:textStyle="italic"   />


</LinearLayout>